--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "mongoose": "^7.2.2",
     "nodemon": "^2.0.20",
-    "socket.io": "^4.5.2"
+    "socket.io": "^4.5.2",
+    "uniqid": "^5.4.0"
   }
 }
